{
    "name": "EmbroideryAction",
    "maps": [
        {
            "name": "EmbroideryCamerCtl",
            "id": "4abad4d9-d659-4c0f-8bf2-918a5f68f25d",
            "actions": [
                {
                    "name": "CenterRotation",
                    "type": "Button",
                    "id": "29e1aa0d-bdd8-48e6-b9cb-2f13fd9e4f0a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseMove",
                    "type": "Value",
                    "id": "1ea3ee38-55a4-4d94-a05f-578988b07b16",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DragCamera",
                    "type": "Button",
                    "id": "abf8af65-231f-4c63-90e6-4782c4639e3d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CameraScale",
                    "type": "Value",
                    "id": "482225d9-a4a3-4186-90a5-96c04e9253b2",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MovePin",
                    "type": "Button",
                    "id": "4d8af464-7579-40bd-b287-e84a3c0cae8e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ConfirmPinPoint",
                    "type": "Button",
                    "id": "ea837b4f-076b-438a-ac0e-e9d1fea10082",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "IsSaveOp",
                    "type": "Button",
                    "id": "75397393-3dd0-447a-b19c-2894e4798a51",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "IsRevokeOp",
                    "type": "Button",
                    "id": "ee74621b-38d1-4dbe-96b1-9a3344474fd5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Ctrl+RightButton",
                    "id": "a787a9cf-4179-4b82-b019-49e5e6dd1388",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CenterRotation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "d8bf6a02-eb47-476c-b107-98469425a17c",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CenterRotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "a04f76af-dcb8-4f5e-8a6e-3a23d2bf0823",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CenterRotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "1fed65c2-c404-4ae8-bb82-a261044efbbd",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "ctrl+mideButton",
                    "id": "7bea474f-f22a-4628-b4fd-54ebf4cba49d",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DragCamera",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "3a4f0780-8e6e-498a-a6b0-1e2448636c61",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DragCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "f664d000-0238-491b-adc5-e38c9f85037b",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DragCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "MideMouseButtonScroll",
                    "id": "ada46214-24c0-4895-89cd-54b32d788a6c",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraScale",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "2836e9b7-6f29-4a2b-b25f-7389d4a63338",
                    "path": "<Mouse>/scroll/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraScale",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "bdf7edad-1511-4c5d-b91d-9af8ad0c9b9f",
                    "path": "<Mouse>/scroll/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraScale",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e0636423-c43a-4ad1-8eff-53b6f9609869",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePin",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fc4c5681-1851-4cbe-96ad-f33184431349",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ConfirmPinPoint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "ctrl + arrUp",
                    "id": "2b2eaf9c-0adf-47b3-a6c2-19b4ee7614d0",
                    "path": "OneModifier",
                    "interactions": "SlowTap",
                    "processors": "",
                    "groups": "",
                    "action": "IsSaveOp",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "7f55991c-a012-40b5-8a74-1ddcb143c612",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IsSaveOp",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "221e5d22-1105-4efc-9f75-a66f9d6cec39",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IsSaveOp",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "ctrl + arrDown",
                    "id": "b496de67-ac66-464d-8631-a8baa90ef87c",
                    "path": "OneModifier",
                    "interactions": "SlowTap",
                    "processors": "",
                    "groups": "",
                    "action": "IsRevokeOp",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "eb83a6b1-ef2b-4256-ab7d-f3642873faf0",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IsRevokeOp",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "0f99cefb-e9cb-4d6c-8e69-8a996986a135",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IsRevokeOp",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}